# Gitea2Forgejo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  pyproject.toml  setup.cfg
docs/: BACKUP_MANIFESTS.md  FORGEJO_SETTINGS_UI_PROPOSAL.md  FUTURE_PRODUCT_DIRECTION.md  LOCAL_EXECUTION.md  MIGRATION_RUNBOOK_VM100.md  PLATFORM_ADAPTERS.md  PRODUCT_ROADMAP.md  VM100_AUDIT_2026-06-18.md
fixtures/: actions-audit.json  docker-audit.json  gitea-123-blocked-audit.json  lfs-heavy-audit.json  sqlite-audit.json  systemd-postgres-nginx-audit.json  vm100-audit.json
fixtures/smoke/: forgejo_10_success.json  post_cutover_failure.json  post_cutover_success.json
scripts/: journal_demo.py
tests/: conftest.py  test_adapters.py  test_audit.py  test_backup_planner.py  test_cli.py  test_compatibility.py  test_discovery.py  test_executor.py  test_fixture_matrix.py  test_journal.py  test_local.py  test_pipeline.py  test_releases.py  test_smoke_harness.py
tooling/: __init__.py  run_live_preflight.py
tooling/backup/: __init__.py  models.py  planner.py
tooling/core/src/gitea_forgejo_migrator/: __init__.py  audit.py  backup.py  cli.py  compatibility.py  io.py  models.py  planning.py  smoke.py
tooling/gitea_forgejo_migrator/: __init__.py  audit.py  backup.py  cli.py  compatibility.py  discovery.py  executor.py  io.py  journal.py  local.py  models.py  planning.py  preflight.py  releases.py  shell.py  simulate.py  smoke.py
tooling/gitea_forgejo_migrator/adapters/: __init__.py  base.py  registry.py  systemd_binary.py
tooling/smoke/: __init__.py  cli.py  harness.py  planner.py
