[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitea-forgejo-migrator"
version = "0.1.0-alpha.1"
description = "Operator-first preflight, gating, and staging plan for in-place Gitea to Forgejo migrations."
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "GiteaForgejoMigrator contributors" }]
keywords = ["gitea", "forgejo", "migration", "preflight", "sysadmin", "git", "smoke-test", "same-vm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gitea-forgejo-migrator = "gitea_forgejo_migrator.cli:main"

[project.urls]
Homepage = "https://github.com/ttad22/Gitea2Forgejo"
Documentation = "https://github.com/ttad22/Gitea2Forgejo/blob/main/README.md"
Source = "https://github.com/ttad22/Gitea2Forgejo"
Issues = "https://github.com/ttad22/Gitea2Forgejo/issues"
Changelog = "https://github.com/ttad22/Gitea2Forgejo/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "tooling" }

[tool.setuptools.packages.find]
where = ["tooling"]
include = ["gitea_forgejo_migrator*", "backup*", "smoke*"]
