[metadata]
name = gitea-forgejo-migrator
version = 0.1.0
description = Operator-friendly preflight, backup, gating, and validation tooling for staged Gitea to Forgejo migrations.

[options]
package_dir =
    = tooling
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = tooling
include =
    gitea_forgejo_migrator
    backup
    smoke

[options.entry_points]
console_scripts =
    gitea-forgejo-migrator = gitea_forgejo_migrator.cli:main
