# Legacy fallback metadata.
# PEP 621 metadata in `pyproject.toml` is authoritative for builds.
# This file is retained so older setuptools/pip that ignore pyproject still
# resolve the package layout correctly.

[options]
package_dir =
    = tooling
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = tooling
include =
    gitea_forgejo_migrator
    backup
    smoke
