# Legacy fallback metadata.
# PEP 621 metadata in `pyproject.toml` is authoritative for builds.
# This file is retained so older setuptools/pip that ignore pyproject still
# resolve the package layout correctly.

[metadata]
name = gitea-forgejo-migrator
version = 0.1.0a1
description = Operator-first preflight, gating, and staging plan for in-place Gitea to Forgejo migrations.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
url = https://github.com/joshrfr/gitea-forgejo-migrator

[options]
package_dir =
    = tooling
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    gitea-forgejo-migrator = gitea_forgejo_migrator.cli:main

[options.packages.find]
where = tooling
include =
    gitea_forgejo_migrator
    backup
    smoke
